k8s/reactive-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: reactive-app-deployment
  labels:
    tier: backend
    app: reactive-app-demok8s
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: backend
      app: reactive-app-demok8s
  template:
    metadata:
      name: reactive-app-pod
      labels:
        tier: backend
        app: reactive-app-demok8s
    spec:
      containers:
        - name: reactive-app
          image: catallicpankaj/reactive-app-user:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
