k8s/reactive-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reactive-app-service
  labels: 
    tier: backend
    app: reactive-app-demok8s
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30005
  selector:
    tier: backend
    app: reactive-app-demok8s
