k8s/reactive-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reactive-app-demok8s-ingress
spec:
  rules:
  - http:
      paths:
      - path: /user-service/
        pathType: Prefix
        backend:
          service:
            name: reactive-app-service
            port:
              number: 8080
